added new create user endpoint
